--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+luajit (2.0.1+hotfix1+dfsg-1) unstable; urgency=low
+
+  * New upsream release
+
+ -- Enrico Tassi <gareuselesinge@debian.org>  Mon, 20 May 2013 18:08:12 +0200
+
 luajit (2.0.0+dfsg-1) unstable; urgency=low
 
   * New upstream release
