--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+luajit (2.1.0-2+a8c3862) unstable; urgency=low
+
+  * Update to LuaJIT v2.1 alpha changeset a8c3862
+
+ -- Evan Wies <evan@neomantra.net>  Fri, 22 Nov 2013 11:04:09 -0500
+
 luajit (2.1.0-1+a014d5e6) unstable; urgency=low
 
   * Update to LuaJIT v2.1 alpha changeset a014d5e6
